# aws-documentdb-tui

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
src/: app.py  main.py  utils.py
src/aws/: cloudwatch.py  docdb.py
src/ui/views/: cluster_detail.py  cluster_list.py
tests/: test_utils.py
